dev/ingress/fake94-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake94-ingress
  namespace: fake94-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake94.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake94-service
                port:
                  number: 20094
